tests/rustdoc-ui/doctest/test-compile-fail3.stderr
error[E0765]: unterminated double quote string
 --> $DIR/test-compile-fail3.rs:3:1
  |
3 | "fail
  | ^^^^^

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0765`.
