tests/rustdoc-ui/doctest/test-compile-fail3.rs
//@ compile-flags:--test

"fail
//~^ ERROR
